feat: add timezone

--- a/src/pages/agenda-day2.astro
+++ b/src/pages/agenda-day2.astro
@@ -22,21 +22,21 @@ import HeaderHero from '../components/HeaderHero.astro';
 
                 <div class="session session-7 track-1" style="grid-column: track-1-start / track-4-end; grid-row: time-0400 / time-0430;">
                     <h3 class="session-title">The state of security in Single Page Applications</h3>
-                    <span class="session-time">04:00 - 04:30</span>
+                    <span class="session-time">04:00 - 04:30pm cest</span>
                     <span class="session-presenter">Martina Kraus</span>
                     <span class="session-track">Keynote</span>
                 </div>
 
                 <div class="session session-1 track-1" style="grid-column: track-1; grid-row: time-0430 / time-0500;">
                     <h3 class="session-title">PWAs with Angular</h3>
-                    <span class="session-time">04:30 - 05:00</span>
+                    <span class="session-time">04:30 - 05:00pm cest</span>
                     <span class="session-presenter">Ankita Sood</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-1 track-2" style="grid-column: track-2; grid-row: time-0430 / time-0500;">
                     <h3 class="session-title">use Embassy; Impl Snake for Micro:bit</h3>
-                    <span class="session-time">04:30 - 05:00</span>
+                    <span class="session-time">04:30 - 05:00pm cest</span>
                     <span class="session-presenter">Cyril MARPAUD</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
@@ -50,119 +50,119 @@ import HeaderHero from '../components/HeaderHero.astro';
 
                 <div class="session session-1 track-4" style="grid-column: track-4; grid-row: time-0430 / time-0500;">
                     <h3 class="session-title">Build conversational AI experiences powered by LLMs</h3>
-                    <span class="session-time">04:30 - 05:00</span>
+                    <span class="session-time">04:30 - 05:00pm cest</span>
                     <span class="session-presenter">Xavier Portilla Edo</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-2 track-1" style="grid-column: track-1; grid-row: time-0500 / time-0530;">
                     <h3 class="session-title">Migrating your conventional Angular Workspace to a Monorepo in a busy company</h3>
-                    <span class="session-time">05:00 - 05:30</span>
+                    <span class="session-time">05:00 - 05:30pm cest</span>
                     <span class="session-presenter">Anirudh Varma</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-2 track-2" style="grid-column: track-2; grid-row: time-0500 / time-0530;">
                     <h3 class="session-title">Lessons Learned from Building a Serverless Notifications System</h3>
-                    <span class="session-time">05:00 - 05:30</span>
+                    <span class="session-time">05:00 - 05:30pm cest</span>
                     <span class="session-presenter">Srushith Repakula</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-2 track-3" style="grid-column: track-3; grid-row: time-0500 / time-0530;">
                     <h3 class="session-title">Writing for Software Engineers</h3>
-                    <span class="session-time">05:00 - 05:30</span>
+                    <span class="session-time">05:00 - 05:30pm cest</span>
                     <span class="session-presenter">Ankur Tyagi</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
 
                 <div class="session session-2 track-4" style="grid-column: track-4; grid-row: time-0500 / time-0530;">
                     <h3 class="session-title">What the heck is a RAG?</h3>
-                    <span class="session-time">05:00 - 05:30</span>
+                    <span class="session-time">05:00 - 05:30pm cest</span>
                     <span class="session-presenter">Haimantika Mitra</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-3 track-1" style="grid-column: track-1; grid-row: time-0530 / time-0600;">
                     <h3 class="session-title">React 19 - The Golden Fleece</h3>
-                    <span class="session-time">05:30 - 06:00</span>
+                    <span class="session-time">05:30 - 06:00pm cest</span>
                     <span class="session-presenter">Tapas Adhikary</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-3 track-2" style="grid-column: track-2; grid-row: time-0530 / time-0600;">
                     <h3 class="session-title">Write Your Own Containers using Go</h3>
-                    <span class="session-time">05:30 - 06:00</span>
+                    <span class="session-time">05:30 - 06:00pm cest</span>
                     <span class="session-presenter">Mohammad Quanit</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-3 track-3" style="grid-column: track-3; grid-row: time-0530 / time-0600;">
                     <h3 class="session-title">Using Material 3 (M3) design with Angular</h3>
-                    <span class="session-time">05:30 - 06:00</span>
+                    <span class="session-time">05:30 - 06:00pm cest</span>
                     <span class="session-presenter">Dharmen Shah</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
 
                 <div class="session session-3 track-4" style="grid-column: track-4; grid-row: time-0530 / time-0600;">
                     <h3 class="session-title">AI for Documentation </h3>
-                    <span class="session-time">05:30 - 06:00</span>
+                    <span class="session-time">05:30 - 06:00pm cest</span>
                     <span class="session-presenter">Felix Jumason</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-4 track-1" style="grid-column: track-1; grid-row: time-0600 / time-0630;">
                     <h3 class="session-title">Angular 17 Unveiled: Revolutionizing Developer Experience</h3>
-                    <span class="session-time">06:00 - 06:30</span>
+                    <span class="session-time">06:00 - 06:30pm cest</span>
                     <span class="session-presenter">Deepa Chaurasia</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-4 track-2" style="grid-column: track-2; grid-row: time-0600 / time-0630;">
                     <h3 class="session-title">Securing Your Django Applications: Best Practices</h3>
-                    <span class="session-time">06:00 - 06:30</span>
+                    <span class="session-time">06:00 - 06:30pm cest</span>
                     <span class="session-presenter">Sophia Iroegbu</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-4 track-3" style="grid-column: track-3; grid-row: time-0600 / time-0630;">
                     <h3 class="session-title">Schema First Approach to Typescript Types Design</h3>
-                    <span class="session-time">06:00 - 06:30</span>
+                    <span class="session-time">06:00 - 06:30pm cest</span>
                     <span class="session-presenter">Maina Wycliffe</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
 
                 <div class="session session-4 track-4" style="grid-column: track-4; grid-row: time-0600 / time-0630;">
                     <h3 class="session-title">Advancing Generative AI integration with Vertex AI Node.js SDK</h3>
-                    <span class="session-time">06:00 - 06:30</span>
+                    <span class="session-time">06:00 - 06:30pm cest</span>
                     <span class="session-presenter">Patty O'Callaghan</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-5 track-1" style="grid-column: track-1; grid-row: time-0630 / time-0700;">
                     <h3 class="session-title">A nerdy guide to the web trending concepts</h3>
-                    <span class="session-time">06:30 - 07:00</span>
+                    <span class="session-time">06:30 - 07:00pm cest</span>
                     <span class="session-presenter">Daniel Afonso</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-5 track-2" style="grid-column: track-2; grid-row: time-0630 / time-0700;">
                     <h3 class="session-title">Meet Your New BFF: Backend to Frontend without the Duct Tape</h3>
-                    <span class="session-time">06:30 - 07:00</span>
+                    <span class="session-time">06:30 - 07:00pm cest</span>
                     <span class="session-presenter">Noam Honig</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-5 track-3" style="grid-column: track-3; grid-row: time-0630 / time-0700;">
                     <h3 class="session-title">TypeScript's 'Never' Type: The Invisible Force Shaping Code?</h3>
-                    <span class="session-time">06:30 - 07:00</span>
+                    <span class="session-time">06:30 - 07:00pm cest</span>
                     <span class="session-presenter">Serkan Sipahi</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
 
                 <div class="session session-5 track-4" style="grid-column: track-4; grid-row: time-0630 / time-0700;">
                     <h3 class="session-title">Understanding Fine-tuning - A primer to customise Large Language Models</h3>
-                    <span class="session-time">06:30 - 07:00</span>
+                    <span class="session-time">06:30 - 07:00pm cest</span>
                     <span class="session-presenter">Aravind Putrevu</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
@@ -174,42 +174,42 @@ import HeaderHero from '../components/HeaderHero.astro';
 
                 <div class="session session-6 track-1" style="grid-column: track-1; grid-row: time-0800 / time-0830;">
                     <h3 class="session-title">Live-Coding: Mastering Web Scraping with Scrapoxy</h3>
-                    <span class="session-time">08:00 - 08:30</span>
+                    <span class="session-time">08:00 - 08:30pm cest</span>
                     <span class="session-presenter">Fabien Vauchelles</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-6 track-2" style="grid-column: track-2; grid-row: time-0800 / time-0830;">
                     <h3 class="session-title">Create a React app with Wing backend</h3>
-                    <span class="session-time">08:00 - 08:30</span>
+                    <span class="session-time">08:00 - 08:30pm cest</span>
                     <span class="session-presenter">Ayush Thakur</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-6 track-3" style="grid-column: track-3; grid-row: time-0800 / time-0830;">
                     <h3 class="session-title">Million Lint: The future of linting</h3>
-                    <span class="session-time">08:00 - 08:30</span>
+                    <span class="session-time">08:00 - 08:30pm cest</span>
                     <span class="session-presenter">Tobiloba Adedeji</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
 
                 <div class="session session-6 track-4" style="grid-column: track-4; grid-row: time-0800 / time-0830;">
                     <h3 class="session-title">Use rust to power python application</h3>
-                    <span class="session-time">08:00 - 08:30</span>
+                    <span class="session-time">08:00 - 08:30pm cest</span>
                     <span class="session-presenter">Sonam</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-7 track-1" style="grid-column: track-1; grid-row: time-0830 / time-0900;">
                     <h3 class="session-title">Cypress, Playwright or Selenium: choosing the right testing tool</h3>
-                    <span class="session-time">08:30 - 09:00</span>
+                    <span class="session-time">08:30 - 09:00pm cest</span>
                     <span class="session-presenter">Soumaya Erradi</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-7 track-2" style="grid-column: track-2; grid-row: time-0830 / time-0900;">
                     <h3 class="session-title">Are you perfectly authorized?</h3>
-                    <span class="session-time">08:30 - 09:00</span>
+                    <span class="session-time">08:30 - 09:00pm cest</span>
                     <span class="session-presenter">Rohit Ghumare</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
@@ -222,28 +222,28 @@ import HeaderHero from '../components/HeaderHero.astro';
 
                 <div class="session session-7 track-4" style="grid-column: track-4; grid-row: time-0830 / time-0900;">
                     <h3 class="session-title">End-to-end secure ML development</h3>
-                    <span class="session-time">08:30 - 09:00</span>
+                    <span class="session-time">08:30 - 09:00pm cest</span>
                     <span class="session-presenter">Mihai Maruseac</span>
                     <span class="session-track">AI/ML and CI/CD</span>
                 </div>
 
                 <div class="session session-8 track-1" style="grid-column: track-1; grid-row: time-0900 / time-0930;">
                     <h3 class="session-title">NGCC No More: Navigating Angular v16 Upgrades</h3>
-                    <span class="session-time">09:00 - 09:30</span>
+                    <span class="session-time">09:00 - 09:30pm cest</span>
                     <span class="session-presenter">Daniel Glejzner</span>
                     <span class="session-track">Web and Mobile</span>
                 </div>
 
                 <div class="session session-8 track-2" style="grid-column: track-2; grid-row: time-0900 / time-0930;">
                     <h3 class="session-title">Building and Deploying Mobile Apps: A Developer's Guide to Easy CI/CD</h3>
-                    <span class="session-time">09:00 - 09:30</span>
+                    <span class="session-time">09:00 - 09:30pm cest</span>
                     <span class="session-presenter">Samuel Abada</span>
                     <span class="session-track">Cloud and Backend</span>
                 </div>
 
                 <div class="session session-8 track-3" style="grid-column: track-3; grid-row: time-0900 / time-0930;">
                     <h3 class="session-title">Micro Frontend - Unleashing Importmap's Potential</h3>
-                    <span class="session-time">09:00 - 09:30</span>
+                    <span class="session-time">09:00 - 09:30pm cest</span>
                     <span class="session-presenter">Jonathan Gelin</span>
                     <span class="session-track">TIL Contributors</span>
                 </div>
@@ -255,17 +255,17 @@ import HeaderHero from '../components/HeaderHero.astro';
                 </div>
 
 
-                <h2 class="time-slot" style="grid-row: time-0400;">04:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0430;">04:30pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0500;">05:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0530;">05:30pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0600;">06:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0630;">06:30pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0700;">07:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0800;">08:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0830;">08:30pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0900;">09:00pm</h2>
-                <h2 class="time-slot" style="grid-row: time-0930;">09:30pm</h2>
+                <h2 class="time-slot" style="grid-row: time-0400;">04:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0430;">04:30pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0500;">05:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0530;">05:30pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0600;">06:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0630;">06:30pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0700;">07:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0800;">08:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0830;">08:30pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0900;">09:00pm CEST</h2>
+                <h2 class="time-slot" style="grid-row: time-0930;">09:30pm CEST</h2>
 
             </div>
         </section>
