--- a/src/pages/agenda-day1.astro
+++ b/src/pages/agenda-day1.astro
@@ -43,10 +43,12 @@ import HeaderHero from '../components/HeaderHero.astro';
                     <a aria-label="Youtube" href="https://www.youtube.com/live/-BLxkNvtmOc?si=t7gU7mXcOAzN5M0t"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
                 </div>
 
-                <div class="session session-1 track-all" style="grid-column: track-3; grid-row: time-0430 / time-0500;">
-                    <h3 class="session-title"></h3>
-                    <span class="session-time"></span>
-                    <span class="session-presenter"></span>
+                <div class="session session-1 track-3" style="grid-column: track-3; grid-row: time-0430 / time-0500;">
+                    <h3 class="session-title">A nerdy guide to the web trending concepts</h3>
+                    <span class="session-time">04:30 - 05:00pm cest</span>
+                    <span class="session-presenter">Daniel Afonso</span>
+                    <span class="session-track">Software Engineering</span>
+                    <a aria-label="Youtube" href="https://www.youtube.com/live/sVAO7qy5SUg?si=_jqQozS6QYfKkmK6"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
                 </div>
 
                 <div class="session session-1 track-4" style="grid-column: track-4; grid-row: time-0430 / time-0500;">
