--- a/src/pages/agenda-day2.astro
+++ b/src/pages/agenda-day2.astro
@@ -156,13 +156,12 @@ import HeaderHero from '../components/HeaderHero.astro';
                     <a aria-label="Youtube" href="https://www.youtube.com/live/GiR12OpoOnQ?si=VRGC4u2kiX3LCW4G"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
                 </div>
 
-                <div class="session session-5 track-1" style="grid-column: track-1; grid-row: time-0630 / time-0700;">
-                    <h3 class="session-title">A nerdy guide to the web trending concepts</h3>
-                    <span class="session-time">06:30 - 07:00pm cest</span>
-                    <span class="session-presenter">Daniel Afonso</span>
-                    <span class="session-track">Web and Mobile</span>
-                    <a aria-label="Youtube" href="https://www.youtube.com/live/IneYPMWCLvU?si=prk4ziZcVbRSD5ra"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
-                </div>
+                <div class="session session-5 track-all" style="grid-column: track-1; grid-row: time-0630 / time-0700;">
+                    <h3 class="session-title"></h3>
+                    <span class="session-time"></span>
+                    <span class="session-presenter"></span>
+                    <span class="session-track"></span>
+                  </div>
 
                 <div class="session session-5 track-2" style="grid-column: track-2; grid-row: time-0630 / time-0700;">
                     <h3 class="session-title">Meet Your New BFF: Backend to Frontend without the Duct Tape</h3>
