--- a/src/pages/agenda-day2.astro
+++ b/src/pages/agenda-day2.astro
@@ -165,11 +165,10 @@ import HeaderHero from '../components/HeaderHero.astro';
                   </div>
 
                 <div class="session session-5 track-2" style="grid-column: track-2; grid-row: time-0630 / time-0700;">
-                    <h3 class="session-title">Meet Your New BFF: Backend to Frontend without the Duct Tape</h3>
+                     <h3 class="session-title">Create your CV using GitHub+Actions and LaTeX</h3>
                     <span class="session-time">06:30 - 07:00pm cest</span>
-                    <span class="session-presenter">Noam Honig</span>
-                    <span class="session-track">Cloud and Backend</span>
-                    <a aria-label="Youtube" href="https://www.youtube.com/live/HISw4wkNKfM?si=dt6l8NcysoBSzUlJ"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+                    <span class="session-presenter">Mohammad-Ali A'RÂBI</span>
+                    <a aria-label="Youtube" href="https://www.youtube.com/live/04fcqC8Ghjc?si=lyqYNt_7y2kFVVbu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
                 </div>
 
                 <div class="session session-5 track-3" style="grid-column: track-3; grid-row: time-0630 / time-0700;">
@@ -242,10 +241,11 @@ import HeaderHero from '../components/HeaderHero.astro';
                 </div>
 
                 <div class="session session-7 track-3" style="grid-column: track-3; grid-row: time-0830 / time-0900;">
-                    <h3 class="session-title">Create your CV using GitHub+Actions and LaTeX</h3>
-                    <span class="session-time">TIL Contributors</span>
-                    <span class="session-presenter">Mohammad-Ali A'RÂBI</span>
-                    <a aria-label="Youtube" href="https://www.youtube.com/live/04fcqC8Ghjc?si=lyqYNt_7y2kFVVbu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+                <h3 class="session-title">Meet Your New BFF: Backend to Frontend without the Duct Tape</h3>
+                    <span class="session-time">08:30 - 09:00pm cest</span>
+                    <span class="session-presenter">Noam Honig</span>
+                    <span class="session-track">TIL Contributors</span>
+                    <a aria-label="Youtube" href="https://www.youtube.com/live/HISw4wkNKfM?si=dt6l8NcysoBSzUlJ"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
                 </div>
 
                 <div class="session session-7 track-4" style="grid-column: track-4; grid-row: time-0830 / time-0900;">
